# cairo_gtk3_window

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  format_codebase.sh  lint_codebase.sh  setup.sh
src/: main.c
src/pch/: cairo_gtk3_window-pch.h  myzdin-pch.h
